updated containers and fixed spacing on different viewports. Made site more responsive through media queries. Still need to update site on smaller view ports and fix letter spacing.

--- a/src/App.css
+++ b/src/App.css
@@ -154,48 +154,298 @@
   border-style: solid;
   border: red;
 }
+.headerText {
+  font-size: 40px;
+}
 
 @media (max-width: 275px) {
   .containerCon {
     max-width: 245px;
   }
+  .gridclass {
+    display: grid;
+    grid-template-columns: repeat(1 minmax(0, 1fr));
+  }
 }
 
 @media (min-width: 355px) {
-  .containerCon {
+  .containerCon1 {
     max-width: 325px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  .headerText {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 0.5rem;
+  }
+  .headerText1 {
+    font-size: 30px;
+    margin-bottom: 2rem;
+  }
+  .textExp {
+    font-size: 14px;
+  }
+  .textDate {
+    font-size: 12px;
+    line-height: 1.25rem;
+  }
+  .textPaperInfo {
+    font-size: 12px;
+    line-height: 2rem;
+  }
+  .footerSize {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+  .button-1 {
+    background-color: #131313;
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial,
+      sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    height: 40px;
+    line-height: 20px;
+    list-style: none;
+    margin: 0;
+    outline: none;
+    padding: 10px 46px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  .bodyTextAbout {
+    color: black;
+    font-size: 18px;
+    font-family: "Playfair Display";
+    font-weight: "500";
+    letter-spacing: 2px;
+    padding-bottom: 1.5rem;
+  }
+
+  .flexAbout {
+    display: flex;
+    flex-direction: column;
+  }
+  .iconSize {
+    height: 2rem;
+  }
+
+  .bodyText {
+    font-size: 16px;
+    word-spacing: 2px;
+  }
+
+  .imgAdler {
+    justify-content: center;
+  }
+  .imgAdlerHeight {
+    height: 6rem;
+  }
+  .expSpacing {
+    margin-top: 2rem;
   }
 }
 
 @media (min-width: 640px) {
-  .containerCon {
-    max-width: 600px;
+  .containerCon1 {
+    max-width: 650px;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    border-radius: 30px;
   }
 }
 
 @media (min-width: 768px) {
-  .containerCon {
-    max-width: 660px;
+  .containerCon1 {
+    max-width: 650px;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    border-radius: 30px;
+  }
+  .gridclass {
+    display: grid;
+    grid-template-columns: repeat(1 minmax(0, 1fr));
   }
 }
 
 @media (min-width: 1024px) {
-  .containerCon {
-    max-width: 920px;
+  .containerCon1 {
+    max-width: 900px;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    border-radius: 30px;
+  }
+  .gridclass {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+  .headerText {
+    font-size: 24px;
+    text-align: center;
+    margin-bottom: 1rem;
+    margin-top: 2rem;
+  }
+  .headerText1 {
+    font-size: 50px;
+  }
+
+  .textDate {
+    font-size: 16px;
+    line-height: 1.25rem;
+  }
+
+  .expGap {
+    gap: 1rem;
+  }
+  .textExp {
+    font-size: 14px;
+  }
+  .textDate {
+    font-size: 12px;
+  }
+
+  .textPaperInfo {
+    font-size: 18px;
+    line-height: 3rem;
+  }
+  .button-1 {
+    font-size: 20px;
+    font-weight: 500;
+    height: 50px;
+  }
+  .iconSize {
+    height: 3rem;
+    padding-bottom: 0.5rem;
+  }
+  .footerSize {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+  .bodyTextAbout {
+    color: black;
+    font-size: 32px;
+    font-family: "Playfair Display";
+    font-weight: "500";
+    letter-spacing: 2px;
+    padding-bottom: 2.5rem;
+  }
+  .flexAbout {
+    display: flex;
+    flex-direction: row;
+  }
+  .aboutImg {
+    width: 50%;
+    justify-content: flex-end;
+    display: flex;
+    padding-top: 2.5rem;
+    padding-right: 2.5rem;
+  }
+  .aboutText {
+    width: 50%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    text-align: left;
+  }
+  .bodyText {
+    font-size: 20px;
+    word-spacing: 2px;
+  }
+  .imgAdler {
+    justify-content: flex-end;
+    padding-right: 4rem;
+  }
+  .imgAdlerHeight {
+    height: 8rem;
+  }
+  .expSpacing {
+    margin-top: 0rem;
   }
 }
 
 @media (min-width: 1280px) {
-  .containerCon {
-    max-width: 1200px;
+  .containerCon1 {
+    max-width: 1100px;
+
+    padding-top: 50px;
+    padding-bottom: 50px;
+    border-radius: 30px;
+  }
+  .headerText {
+    font-size: 25px;
+    text-align: left;
+    margin-bottom: 1rem;
+  }
+  .textExp {
+    font-size: 14px;
+  }
+  .textDate {
+    font-size: 12px;
+    line-height: 1.25rem;
+  }
+  .expGap {
+    gap: 6rem;
+  }
+  .gridclass {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
 @media (min-width: 1536px) {
-  .containerCon {
-    max-width: 1460px;
+  .containerCon1 {
+    border: rgb(35, 173, 0);
+    border-style: solid;
+    border-radius: 2px;
+    max-width: 1400px;
+
+    padding-top: 50px;
+    padding-bottom: 50px;
+    border-radius: 30px;
+  }
+  .gridclass {
+    display: grid;
+    grid-template-columns: repeat(1 minmax(0, 1fr));
+  }
+  .headerText {
+    font-size: 40px;
+  }
+  .expGap {
+    gap: 8rem;
   }
 }
+
+@media (min-width: 1750px) {
+  .containerCon1 {
+    border: blue;
+    border-style: solid;
+    border-radius: 2px;
+    max-width: 1600px;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    border-radius: 30px;
+  }
+}
+
 @media (min-width: 1900px) {
   .containerCon {
     max-width: 1550px;
@@ -206,6 +456,10 @@
     border-radius: 30px;
   }
   .containerCon1 {
+    border: red;
+    border-style: solid;
+    border-radius: 2px;
+    border-width: 2px;
     max-width: 1750px;
     padding-left: 200px;
     padding-right: 200px;
@@ -213,57 +467,27 @@
     padding-bottom: 50px;
     border-radius: 30px;
   }
-}
-
-.headerText {
-  font-size: 50px;
-}
-
-.bodyText {
-  font-size: 24px;
-  word-spacing: 2px;
+  .expGap {
+    gap: 12rem;
+  }
+  .textExp {
+    font-size: 16px;
+  }
+  .textDate {
+    font-size: 14px;
+    line-height: 1.25rem;
+  }
+  .gridclass {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 }
 
 .textColor {
   color: #3c5341;
 }
 
-.bodyTextAbout {
-  color: black;
-  font-size: 32px;
-  font-family: "Playfair Display";
-  font-weight: "500";
-  letter-spacing: 2px;
-}
-
 /* CSS */
-.button-1 {
-  background-color: #131313;
-  border-radius: 8px;
-  border-style: none;
-  box-sizing: border-box;
-  color: #ffffff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial,
-    sans-serif;
-  font-size: 20px;
-  font-weight: 500;
-  height: 50px;
-  line-height: 20px;
-  list-style: none;
-  margin: 0;
-  outline: none;
-  padding: 10px 46px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  transition: color 100ms;
-  vertical-align: baseline;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
 
 .button-1:hover,
 .button-1:focus {
